mule-management-console/v/3.5/persisting-mmc-data-to-oracle.adoc
= Persisting MMC Data to Oracle

*_MMC Version 3.4.2 and Later_*

This document describes how to persist environment and transaction data to Oracle databases. Follow the instructions to [install the Oracle database], then follow the specific instructions for [environment data] or [transaction data] persistence to set up your user, create your database, and configure your MMC instance to persist your data.

[WARNING]
Remember that *environment data and transaction data must exist in two separate schemas* (regardless of whether they are on the same server or use the same platform).

== Assumptions

This document assumes that you have an understanding of the basic [Architecture of the Mule Management Console].

It also assumes that you have installed:

* *MMC Version 3.5.0*. Download it from the [customer portal] if you need to upgrade to this version.

* *a Web application server such as Tcat, Tomcat, or JBoss*. Please refer to the [Hardware and Software Requirements] for the latest information about hardware requirements and supported application servers, Java Runtime Environments, and browsers.

For practical purposes, this document mentions Tomcat as the servlet container; however, the instructions contained here apply also to Tcat or JBoss. If using Tcat or JBoss, make sure to unpack the Management Console .war file in the appropriate directory. For additional information, see [Installing the Production Version of MMC].

[NOTE]
====
In this document, `<MMC_HOME>` refers to the directory where MMC is installed.

If you are using the trial version, this directory is inside the root of the embedded Tomcat server from which MMC runs. Depending on where you placed the bundled installation, the path will be similar to `<installation_root>/mmc-distribution-mule-console-bundle-3.5.0/mmc-3.5.0/apache-tomcat-7.0.52/webapps/mmc-3.5.0`.

If you are using a production installation in an application server such as Tomcat, the path should be similar to `<Tomcat root>/webapps/mmc-console-3.5.0`. For example `/var/lib/tomcat6/webapps/mmc-console-3.5.0`.
====

== Installing the Oracle Database

The following example uses Oracle Database Express Edition 11.*. The installation outlined is basic: the database server is installed on the local machine, listening on the default port with security deactivated (unsecured connection to the database).

=== Tools

* SQL Developer 3.0.04:
** http://www.oracle.com/technetwork/developer-tools/sql-developer/downloads/index.html[Download the latest version]
** Consult the http://docs.oracle.com/cd/E25259_01/doc.31/e26419/toc.htm[installation guides for Linux and Windows]
* Oracle Database Expression Edition 11.x:
** http://www.oracle.com/technetwork/products/express-edition/downloads/index.html[Download the latest version]
** Consult the http://docs.oracle.com/cd/E17781_01/index.htm[installation guides for Linux and Windows]
** Refer to the http://www.oracle.com/pls/db112/homepage[full documentation library]

[IMPORTANT]
====
*Important!*

Do not attempt to run SQL Developer with JDK 1.7. Even though the SQL installation guide lists “JDK 1.6.11 or later” as suitable for installation, attempting to run SQL Developer with JDK 1.7. results in a warning message and malformed SQL code from SQL Developer.
====

=== Installing SQL Developer

Follow the simple instructions provided by the documentation listed https://developer.mulesoft.com/docs/display/35X/Persisting+MMC+Data+to+Oracle#PersistingMMCDatatoOracle-Tools[above] to decompress the installer and run the executable for SQL Developer.

=== Installing Oracle Express

Oracle Express provides a straightforward graphical installer for Windows and an `.rpm` package for Linux. Simply follow the instructions provided by the documentation listed https://developer.mulesoft.com/docs/display/35X/Persisting+MMC+Data+to+Oracle#PersistingMMCDatatoOracle-Tools[above].

[NOTE]
Both Windows and Linux require you to have administrator privileges in order to install the Oracle Express.

=== Configuration Files

The files `listner.ora` and `tnsnames.ora` are automatically generated during installation.

For Linux, these files typically resides at `/u01/app/oracle/product/11.2.0/xe/network/admin`.

On Windows, `listner.ora` and `tnsnames.ora` typically reside at: `C:\oracleexe\app\oracle\product\11.2.0\server\network\admin`.

*listener.ora listing*

[source, code, linenums]
----
# listener.ora Network Configuration File:
SID_LIST_LISTENER =
    (SID_LIST =
        (SID_DESC =
             (SID_NAME = PLSExtProc)
             (ORACLE_HOME = /u01/app/oracle/product/11.2.0/xe)
             (PROGRAM = extproc)
         )
    (SID_DESC =
        (SID_NAME = CLRExtProc)
        (ORACLE_HOME = /u01/app/oracle/product/11.2.0/xe)
        (PROGRAM = extproc)
    )
    (SID_DESC =
        (SID_NAME = XE)
        (ORACLE_HOME = /u01/app/oracle/product/11.2.0/xe)
    )
)
 
LISTENER =
    (DESCRIPTION_LIST =
        (DESCRIPTION =
            (ADDRESS = (PROTOCOL = IPC)(KEY = EXTPROC1))
            (ADDRESS = (PROTOCOL = TCP)(HOST = 0.0.0.0)(PORT = 1521))
        )
    )
 
DEFAULT_SERVICE_LISTENER = (XE)
----
*listing of tnsnames.ora*

[source, code, linenums]
----
# tnsnames.ora Network Configuration File:
 
XE =
    (DESCRIPTION =
        (ADDRESS = (PROTOCOL = TCP)(HOST = 0.0.0.0)(PORT = 1521))
        (CONNECT_DATA =
            (SERVER = DEDICATED)
            (SERVICE_NAME = XE)
        )
    )
 
EXTPROC_CONNECTION_DATA =
    (DESCRIPTION =
        (ADDRESS_LIST =
            (ADDRESS = (PROTOCOL = IPC)(KEY = EXTPROC1))
        )
    (CONNECT_DATA =
        (SID = PLSExtProc)
        (PRESENTATION = RO)
    )
)
 
ORACLR_CONNECTION_DATA =
    (DESCRIPTION =
        (ADDRESS_LIST =
           (ADDRESS = (PROTOCOL = IPC)(KEY = EXTPROC1))
     )
    (CONNECT_DATA =
        (SID = CLRExtProc)
        (PRESENTATION = RO)
    )
)
----


[NOTE]
For the `HOST` value, MuleSoft recommends a static IP address (for example, `192.168.1.10`), or the `0.0.0` address. MuleSoft further recommends against using `localhost` or a hostname for `HOST`.

[IMPORTANT]
Be aware that, if the file `slqnet.ora` exists (usually in `/app/oracle/product/11.2.0/xe/network.admin`), it may contain some options which have been known to cause problems. For example, unless you are fine-tuning the database, you should disable NFS security integration by including the following parameter: `SQLNET.AUTHENTICATION_SERVICES = (NONE)`.

== Persisting Environment Data

To set up an Oracle database to persist your MMC environment data, you need to complete three steps:

. [Create the database user and connection]
. [Set up the database tables]
. [Set up MMC]

[NOTE]
====
The embedded database files for the Mule Management Console reside at:

`<MMC installation path>/.mule/mmc/mmc-data/db`
====

=== Creating the Database User and Connection

. Launch the SQL Developer:

.. Navigate to `<sqldeveloper install>/sqldeveloper`
.. Launch SQL Developer according to your operating system:

** On Linux and Mac OS X, run the `sqldeveloper.sh` shell script
** One Windows, launch `sqldeveloper.exe`
+
If SQL developer asks for full Java path, enter the full path. Typically Java paths are

*** Linux: `/usr/java/jdk1.6.0_31/bin`
*** Windows: `C:\Program Files\Java\jdk1.6.0_31\bin`

. In SQL Developer, create a new database connection:

.. Display the *New/Select Database connection* dialog box. To do so, follow these steps:

... Click the *Connections* tab in the left-hand pane.
... Right-click *Connections*
... Select *New Connection*

.. In the connection *Name* field, enter `mmc_persistency_status`.
.. In the *Username* field, enter `SYSTEM`.
.. In the *Password* field, enter the `SYSTEM` password that you issued during the Oracle Express installation process.
.. In the *Hostname* field ensure that the hostname is correct (it will be `localhost`, if Oracle is installed on the lost machine).
.. In the *SID* field, enter `xe`.

. Verify the connection by clicking *Test*. After testing, verify that the message `Status: Success` appears near the bottom of the dialog box.

. Click *Save* to save the connection settings you have specified.

. Click *Connect*, then expand the connection elements menu by clicking the plus sign next to the name of your connection on the *Connections* tab.

. Create a new database user by following these steps:
.. Right-click *Other Users*, then select *Create User* to display the *Create/Edit User* dialog box.
.. Complete the fields with the required information. The following provides sample guidance:

*** Username: `MMC_STATUS`
*** New Password: `mmc123`
*** Default Tablespace: `USERS`
*** Temporary Tablespace: `TEMP`
*** Roles tab: `CONNECT`
*** System Privileges tab: `TRIGGER, CREATE TABLE, CREATE SEQUENCE`
+
[NOTE]
This setup was tested using an unlimited quota on the USERS tablespace

. Click *Apply*, then click *Close*.

=== Setting Up the Database Tables

On this first run, JCR automatically creates all tables needed to store persistent MMC information However, you must manually create tables that store Quartz job information; otherwise an error similar to the following will occur:

[source, code, linenums]
----
ERROR: relation “qrtz_locks” does not exist.
----

To create the   and insert tables, follow these steps:

. Navigate to: `<MMC_HOME>/WEB-INF/classes/quartz`.
. Locate the SQL script: `tables_oracle.sql`.
. Execute `tables_oracle.sql` on the target database as `USER MMC_STATUS`
+

*`sqlplus` utility to execute `tables_oracle.sql`.*

.. To run `tables_oracle.sql` using the sqlplus utility, complete one of the following steps depending on your operating system:
*** *Windows*: From the Windows Start menu: Select *Programs* (or All Programs) > *Oracle Database Express 11g Edition* > *Run SQL Command Line*. This will open the `sqlplus` command prompt.
*** *In Linux*: Open the appropriate menu (for example *Applications* in Gnome, or the *K* menu in KDE), then select *Oracle Database 11g Express Edition*, then *Run SQL Command Line*.

.. After the `sqlplus` command prompt opens, type: connect `MMC_STATUS/mmc123@XE`
.. Run the `tables_oracle.sql` script by entering the following:
+
[source, code, linenums]
----
start <path to script>/tables_oracle.sql
----

.. To exit `sqlplus` type: `exit`.
+
[NOTE]
For detailed information about the `sqlplus` command, consult the *SQL*Plus Reference Guide*.

At this point, the Oracle database is completely defined.


=== Setting Up MMC to Use Oracle for Persisting Environment Data

. First, install the appropriate [database driver].
. Then, follow the instructions below for editing the following configuration files:

** [web.xml]
** [quartz-oracle-1.8.5.jar]

==== Drivers

Obtain the appropriate drivers using the links below:

* http://www.oracle.com/technetwork/database/features/jdbc/index-091264.html[ojdbc5.jar]
* http://repo1.maven.org/maven2/org/quartz-scheduler/quartz-oracle/1.8.5/quartz-oracle-1.8.5.jar[quartz-oracle-1.8.5.jar]
+
[WARNING]
The quartz Oracle jar must match the library version provided for quartz (i.e., `quartz-1.8.5.jar`)

Copy the Oracle drivers to the following directory `<MMC_HOME>/WEB-INF/lib`.

==== General Setup

This example uses the parameters employed for settings up the Oracle database earlier in this document.

* Oracle is listening on `localhost`, port `1521`, with SID: `XE`
* User: `MMC_STATUS`
* Password: `mmc123`

==== MMC Configuration

Configure MMC to store data on a Oracle database involves two basic tasks:

* Modifying the file `web.xml` to tell MMC to use Oracle instead of its default database
* Modifying the file `mmc-oracle.properties` to set the parameters for connecting to the Oracle database

==== Modify `web.xml`

. In the directory `<MMC_HOME>/WEB-INF`, locate the file `web.xml`, then open it for editing.
. Locate the `spring.profiles.active` section, shown below.
+
[source, xml, linenums]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-h2,env-derby</param-value>
</context-param>
----

. Delete the string `env-derby`, then replace it with `env-oracle`, as shown below.
+
[source, xml, linenums]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-h2,env-oracle</param-value>
</context-param>
----

. If you are also planning to [persist transaction data] to Oracle, delete the string `tracking-h2` and replace it with `tracking-oracle`.
+
[TIP]
The `spring.profiles.active` section in the `web.xml` configuration file allows you to define what external databases are used for storing environment and/or tracking data. For a quick instructions for all supported database servers, see [Configuring MMC for External Databases - Quick Reference].

==== Modifying `mmc-oracle.properties`

In the directory `<MMC_HOME>/WEB-INF/classes/META-INF/databases`, locate the file `mmc-oracle.properties`, then open it for editing.

The table below lists the settings contained in the file. Modify the values as needed. In general, the only values that you should need to modify are `env.username`, `env.password`, `env.host`, `env.port` and `env.dbschema`.

[%header%autowidth.spread]
|===
|Parameter |Description |Default
|`env.driver` |Driver to use for connecting to the database. |`oracle.jdbc.driver.OracleDriver`
|`env.script` |Script to use for creating the tables in the target database. |`oracle`
|`env.username` |Database user |`mmc123`
|`env.host` |Hostname or IP address where the database server is listening. |`localhost`
|`env.port` |Port where the database server is listening. |`1521`
|`env.url` |URL for connecting to the database. |`jdbc:oracle:thin:${env.username}/${env.password}@${env.host}:${env.port}/${env.servicename}`
|`env.servicename` |Service name for connecting to the external database. |`XEXDB`
|===

=== Removing Local Database Files

For the configuration changes to take effect, before launching MMC you need to delete the local database files that MMC uses by default.

In the root directory of your Web application server, locate the `mmc-data` directory (for example, `/var/lib/tomcat6/mmc-data`), then delete the `mmc-data` directory.

[NOTE]
Before you delete `mmc-data`, make a backup copy of this directory and store it in a safe location. If anything goes wrong with your new database configuration, you can use `mmc-data` to restore the old database configuration while you troubleshoot your new database config in a test environment.

At this point, MMC, is so configured to store environment data on the external Oracle database that you specified.

=== Disaster Recovery of Environment Data

Out of the box, MMC stores persistent state data in the folder `<Mule install path>/.mule/mmc/mmc-data`. If for some reason database files become corrupted, you’ll probably have to delete `mmc-data` and start from scratch, unless you have a backup copy of `mmc-data`. But having a backup copy of `mmc-data` does not cover a catastrophic failure with complete data loss on the MMC host itself, nor does it allow for an active-passive configuration for immediate recovery.

One possible solution is to backup the database to a single file, which can then be copied to another machine. If the need for immediate recovery arises, you can use this file to restore the database to its original state.

[WARNING]
====
When you restore MMC to a previous state, be aware of the following:

* You are restoring MMC state data, which is not related to the persistence of Business Events, which use a completely different mechanism to store data.
* Registered servers at the time of the backup are restored, which means that one of the following situations may arise:
** A server is paired to another Mule instance. In this case, “unpair” the server through MMC, then re-pair it. This can affect deployments and server groups.
** A server does not exist anymore. Unpair the server.
Another server is using the same IP and port as the original server. Try to identify the original server’s current IP and port, then re-pair.
** A server is correctly connected, but after the backup, deployed and/or undeployed apps are not shown or are shown incorrectly. Undeploy/Redeploy as needed to eliminate the unreconciled state.
====

This scenario assumes the following conditions:

* Oracle Xpress 11.x
* The database has already been created, including the following data tables:
** User: `MMC_STATUS`
** Permissions:
*** `EXP_FULL_DATABASE`
*** `IMP_FULL_DATABASE`
*** `DBA`
* Tool to access database: SQL Developer 3.0.04
* Tool for backup: `exp` (bundled with the binaries of the Oracle distribution package)
* Tool for restore: `imp` (bundled with the binaries of the Oracle distribution package)
* Arbitrary dump file name: `OracleMMCDB`

==== Database Backup Procedure

[WARNING]
Tables on the database contain Binary Large Objects (BLOBs). A regular database export using SQL Developer does not export BLOB contents, so when restoring the database those fields are marked as `NULL`.

To backup the database, open a terminal and issue the following command:

[source, code, linenums]
----
exp MMC_STATUS/mmc123 file=OracleMMCDB.dmp full=yes
----

The file `OracleMMCDB.dmp` will be created in the same folder where the `exp` utility resides.

For help on `exp` command parameters run:

[source, code, linenums]
----
exp help=yes
----

==== Database Restore Procedure

Open a terminal and run the following command:

[SOURCE]
----
imp MMC_STATUS/mmc123 file=OracleMMCDB.dmp full=yes
----

[WARNING]
The example assumes that the dump file, `OracleMMCDB.dmp`, is located in the same folder as the `imp` utility. If this is not the case, specify the full path to the `.dmp` file when calling the `imp` command.

For help on `imp` command parameters run:

[source, code, linenums]
----
imp help=yes
----

*listing of `imp` output*:

[source, code, linenums]
----
C:\QA\oracle.xe\app\oracle\product\11.2.0\server\bin>imp MMC_STATUS/mmc123 file=someOracleFile.dmp full=yes
  
Import: Release 11.2.0.2.0 - Production on Thu Mar 29 11:03:29 2012
  
Copyright (c) 1982, 2009, Oracle and/or its affiliates. All rights reserved.
  
Connected to: Oracle Database 11g Express Edition Release 11.2.0.2.0 - Production
  
Export file created by EXPORT:V11.02.00 via conventional path
import done in WE8MSWIN1252 character set and AL16UTF16 NCHAR character set
import server uses AL32UTF8 character set (possible charset conversion)
. importing MMC_STATUS's objects into MMC_STATUS
. . importing table "FILESYSTEM_VERSION_FSENTRY" 1 rows imported
. . importing table "JR_CORE_BINVAL" 0 rows imported
. . importing table "JR_CORE_BUNDLE" 187 rows imported
. . importing table "JR_CORE_NAMES" 0 rows imported
. . importing table "JR_CORE_REFS" 5 rows imported
. . importing table "QRTZ_BLOB_TRIGGERS" 0 rows imported
. . importing table "QRTZ_CALENDARS" 0 rows imported
. . importing table "QRTZ_CRON_TRIGGERS" 2 rows imported
. . importing table "QRTZ_FIRED_TRIGGERS" 0 rows imported
. . importing table "QRTZ_JOB_DETAILS" 2 rows imported
. . importing table "QRTZ_JOB_LISTENERS" 0 rows imported
. . importing table "QRTZ_LOCKS" 5 rows imported
. . importing table "QRTZ_PAUSED_TRIGGER_GRPS" 0 rows imported
. . importing table "QRTZ_SCHEDULER_STATE" 0 rows imported
. . importing table "QRTZ_SIMPLE_TRIGGERS" 0 rows imported
. . importing table "QRTZ_TRIGGERS" 2 rows imported
. . importing table "QRTZ_TRIGGER_LISTENERS" 0 rows imported
. . importing table "REPO_FSENTRY" 8 rows imported
. . importing table "SEARCH_INDEX_FSENTRY" 1 rows imported
. . importing table "SEARCH_INDEX_W_FSENTRY" 1 rows imported
. . importing table "VERSION_BINVAL" 0 rows imported
. . importing table "VERSION_BUNDLE" 3 rows imported
. . importing table "VERSION_NAMES" 0 rows imported
. . importing table "VERSION_REFS" 0 rows imported
. . importing table "WS1_FSENTRY" 1 rows imported
Import terminated successfully without warnings.
----
*`listner.ora` listing*:

[source, code, linenums]
----
C:\QA\oracle.xe\app\oracle\product\11.2.0\server\bin>imp MMC_STATUS/mmc123 file=
someOracleFile.dmp full=yes
  
Import: Release 11.2.0.2.0 - Production on Thu Mar 29 11:03:29 2012
  
Copyright (c) 1982, 2009, Oracle and/or its affiliates.  All rights reserved.
  
Connected to: Oracle Database 11g Express Edition Release 11.2.0.2.0 - Production
  
Export file created by EXPORT:V11.02.00 via conventional path
import done in WE8MSWIN1252 character set and AL16UTF16 NCHAR character set
import server uses AL32UTF8 character set (possible charset conversion)
. importing MMC_STATUS's objects into MMC_STATUS
. . importing table   "FILESYSTEM_VERSION_FSENTRY"          1 rows imported
. . importing table               "JR_CORE_BINVAL"          0 rows imported
. . importing table               "JR_CORE_BUNDLE"        187 rows imported
. . importing table                "JR_CORE_NAMES"          0 rows imported
. . importing table                 "JR_CORE_REFS"          5 rows imported
. . importing table           "QRTZ_BLOB_TRIGGERS"          0 rows imported
. . importing table               "QRTZ_CALENDARS"          0 rows imported
. . importing table           "QRTZ_CRON_TRIGGERS"          2 rows imported
. . importing table          "QRTZ_FIRED_TRIGGERS"          0 rows imported
. . importing table             "QRTZ_JOB_DETAILS"          2 rows imported
. . importing table           "QRTZ_JOB_LISTENERS"          0 rows imported
. . importing table                   "QRTZ_LOCKS"          5 rows imported
. . importing table     "QRTZ_PAUSED_TRIGGER_GRPS"          0 rows imported
. . importing table         "QRTZ_SCHEDULER_STATE"          0 rows imported
. . importing table         "QRTZ_SIMPLE_TRIGGERS"          0 rows imported
. . importing table                "QRTZ_TRIGGERS"          2 rows imported
. . importing table       "QRTZ_TRIGGER_LISTENERS"          0 rows imported
. . importing table                 "REPO_FSENTRY"          8 rows imported
. . importing table         "SEARCH_INDEX_FSENTRY"          1 rows imported
. . importing table       "SEARCH_INDEX_W_FSENTRY"          1 rows imported
. . importing table               "VERSION_BINVAL"          0 rows imported
. . importing table               "VERSION_BUNDLE"          3 rows imported
. . importing table                "VERSION_NAMES"          0 rows imported
. . importing table                 "VERSION_REFS"          0 rows imported
. . importing table                  "WS1_FSENTRY"          1 rows imported
Import terminated successfully without warnings.
----


== Persisting Transaction Data

To set up Oracle to persist your MMC transaction data, you need to complete three steps:

. [Create the database user and connection]
. [Determine the database quota]
. [Set up MMC]

=== Creating the Database User and Connection

You can create the database user and connection using the SQL Developer GUI. The procedure is described in this document, in the [Persisting Environment Data] section. There you will find detailed instructions for launching SQL Developer and using it to create the database user and connection.

Using those instructions as reference, open the *New/Select Database connection* dialog box, then create a new database user and connection with the following parameters:

* *Connection name*: `mmc_persistency_tracking`
* *Username*: `SYSTEM`
* *Password*: The password that you issued during the Oracle Express Installation Process
* *Hostname*: Hostname of the machine where the Oracle server is installed
* *SID*: `xe`

==== Verify and Save the Connection

. Click *Test* to verify the connection. After testing, verify that the message `Status: Success` appears near the bottom of the dialog box.
. Click *Save* to save the connection settings you have specified.

==== Configure the Connection

. Click *Connect*, then expand the connection elements menu by clicking the plus sign next to the name of your connection on the *Connections* tab.
. Right-click *Other Users*, then select *Create User* to display the *Create/Edit User* dialog box.
. Complete the fields with the required information. The following provide sample guidance:

** User Name: `TRACKER`
** New Password: `tracker`
** Default Tablespace: `USERS`
** Temporary Tablespace: `TEMP`
** Roles tab: RESOURCE, `CONNECT`
** System Privileges tab: `CREATE ANY TABLE, CREATE ANY SEQUENCE`

. Click *Apply*, then click *Close*.

=== Determining Database Quota

Database size will, of course, vary greatly depending on usage, and the database quota should be determined while taking into account the actual usage on the environment. One way to do this is by performing load tests and extrapolating the results to actual usage over a period of time.

To determine the actual size of the database, launch Oracle's `sqlplus` utility (see below) and run the following command:

[source, code, linenums]
----
select sum(bytes) from user_segments;
----

*details on using the sqlplus utility to run commands*:

. Access the Oracle Express menu by completing one of the following steps, depending on your operating system:
** On Windows: From the Windows Start menu: To open the *`sqlplus`* command prompt, select *Programs (or All Programs) > Oracle Database Express 11g Edition > Run SQL Command Line*.
** On Linux: Open the appropriate menu (for example, *Applications* in Gnome, or the *K* menu in KDE), select *Oracle Database 11g Express Edition*, then select *Run SQL Command Line*.
. After the `sqlplus` command prompt opens, type: `connect TRACKER/tracker@XE` (in this example, `TRACKER` is the user and `tracker` is the password)
. Run the command select `sum(bytes) from user segments`;
. To exit `sqlplus`, type: `exit`
+
[NOTE]
For detailed information about the `sqlplus` command, consult the [SQL*Plus Reference Guide].



Output should similar to the following.

[source, code, linenums]
----
SQL> connect TRACKER/tracker @XE
Connected.
SQL> select sum(bytes) from user_segments;
  
SUM(BYTES)
----------
    5832704
  
SQL>
----

This indicates that the current database size is 5.83MB.

=== Setting Up MMC to Use Oracle for Persisting Transaction Data

==== Installing the Database Driver

The driver is `ojdbc5.jar`. [Download] the driver, then copy the `ojdbc5.jar` file to the directory `<MMC_HOME>/WEB-INF/lib/`.

==== MMC Configuration

Configuring MMC to store Business Events data on a Oracle database involves two basic tasks:

* Modifying the file `web.xml` to tell MMC to use Oracle instead of its default database
* Modifying the file `tracking-persistence-oracle.properties` to set the parameters for connecting to the Oracle database

==== Modifying web.xml

. In the directory `<MMC_HOME>/WEB-INF`, locate the file `web.xml`, then open it for editing.
. Locate the `spring.profiles.active` section, shown below.
+
[source, xml, linenums]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-h2,env-derby</param-value>
</context-param>
----

. Delete the string `tracking-h2`, then replace it with `tracking-oracle`, as shown below.
+
[source, xml, linenums]
----
<context-param>
<param-name>spring.profiles.active</param-name>
<param-value>tracking-oracle,env-derby</param-value>
</context-param>
----

. If you are also planning to [persist environment data] to Oracle, delete the string `env-derby` and replace it with `env-oracle`.

[TIP]
The `spring.profiles.active` section in the web.xml configuration file allows you to define what external databases are used for storing environment and/or tracking data. For a quick instructions for all supported database servers, see [Configuring MMC for External Databases - Quick Reference].

==== Modifying tracking-persistence-oracle.properties

In the directory `<MMC_HOME>/WEB-INF/classes/META-INF/databases`, locate the file `tracking-persistence-oracle.properties`, then open it for editing.

Modify the included settings as needed, according to the table below. In general, the only values that you should need to modify are `mmc.tracking.db.username`, `mmc.tracking.db.password`, `mmc.tracking.db.host`, `mmc.tracking.db.port` and `mmc.tracking.db.servicename`.

[%header%autowidth.spread]
|===
|Parameter |Description |Default
|`mmc.tracking.db.platform` |Type of database server to connect to |`oracle(DriverVendor=oracle)`
|`mmc.tracking.db.driver` |Driver to use for connecting to the database |`oracle.jdbc.driver.OracleDriver`
|`mmc.tracking.db.host` |Hostname or IP address where the database server is listening |`localhost`
|`mmc.tracking.db.port` |Port where the database server is listening |`1521`
|`mmc.tracking.db.url` |URL for connecting to the database a|

[source, code, linenums]
----
jdbc:oracle:thin:@${mmc.tracking.db.host}:
${mmc.tracking.db.port}
/${mmc.tracking.db.servicename}
----
|`mmc.tracking.db.username` |Database user |`mmc_tracking`
|`mmc.tracking.db.password` |Password for the database user |`mmc123`
|`mmc.tracking.db.servicename` |Service name for connecting to the external database |`XEXB`
|`mmc.max.events.exception.details.length` |Number of characters from a Business Events exception that will be stored in the tracking database. The maximum allowed is 261120. |`8000`
|===

Save the file with your modifications, if any.

== Removing Local Database Files

For the configuration changes to take effect, before launching MMC you need to delete the local database files that MMC uses by default.

In the root directory of your Web application server, locate the `mmc-data` directory (for example, `/var/lib/tomcat6/mmc-data`), then delete the `mmc-data` directory.

[NOTE]
Before you delete mmc-data, make a backup copy of this directory and store it in a safe location. If anything goes wrong with your new database configuration, you can use `mmc-data` to restore the old database configuration while you troubleshoot your new database config in a test environment.

At this point, MMC, is configured to store tracking data on the external Oracle database that you specified.

=== Troubleshooting Tips

Error message:

[source, code, linenums]
----
ORA-12519, TNS:no appropriate service handler found
----

If you get this error message, you will need to run the SQL command provided below, then restart the TNS listener.

As user SYS, run:

[source, code, linenums]
----
ALTER SYSTEM SET PROCESSES= 150 SCOPE=SPFILE;
----

To run the SQL command, you can use the `sqlplus` utility, as explained [above].

To restart your TNS listener:

On Windows:

. Log in as the user who installed Oracle Database Express, then open a DOS terminal.
. Check the status of the TNS Listener by running the following command: `LSNRCTL STATUS`
. To stop the TNS Listener, run `LSNRCTL STOP`
. To start the TNS Listener, run `LSNRCTL START`

On Unix/Linux:

. Log in to the oracle system user, for example by running the command su - oracle.
. Set the appropriate environment variables by performing these steps:
.. Navigate to the bin directory of the Oracle installation (typically, `/u01/app/oracle/product/11.2.0/xe/bin`).
.. Run the command `source oracle_env.sh`.
. After setting environment variables, check the TNS listener status by running `lsnrctl` status
. To stop the TNS listener, run `lsnrctl stop`
. To start the TNS listener, run `lsnrctl start`


== See Also

* Read more about [MMC setup].
* Review the [Architecture of the Mule Management Console].
